--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>goit-markup-hw-04-mart</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto:300,400,900&display=swap"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:300,400,700,900&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -136,7 +136,7 @@
               <h3 class="blog-name">
                 Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
               </h3>
-              <p class="descr-blog">
+              <p class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Accusantium non ad cum, quisquam nulla labore, quia itaque,
                 ratione error minus quam at beatae consequuntur fugiat! Sit
@@ -145,16 +145,14 @@
                 placeat magnam iure reiciendis maxime delectus quae vitae, totam
                 fugit!
               </p>
-              <button class="button">
-                <a href="/" target="_blank" class="button-link">Read More</a>
-              </button>
+              <button class="button">Read More</button>
             </li>
             <li class="blog-item">
               <img src="./images/Blog2.png" alt="girls" class="img-blog" />
               <h3 class="blog-name">
                 Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
               </h3>
-              <p class="descr-blog">
+              <p class="text">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque
                 nam, ipsam pariatur possimus quas labore eligendi non facilis
                 inventore exercitationem, tempore, deserunt quod ab saepe.
@@ -162,16 +160,14 @@
                 eveniet et. Quisquam est modi ut ipsam laudantium alias earum
                 nulla, explicabo eveniet ad, dolor eius reprehenderit non!
               </p>
-              <button class="button">
-                <a href="/" target="_blank" class="button-link">Read More</a>
-              </button>
+              <button class="button">Read More</button>
             </li>
-            <li class="news-item">
+            <li class="blog-item">
               <img src="./images/blog3.png" alt="bus" class="img-blog" />
               <h3 class="blog-name">
                 Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
               </h3>
-              <p class="descr-blog">
+              <p class="text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem
                 aliquid ut suscipit ratione facere ea, accusantium perspiciatis
                 ullam aliquam dignissimos, reiciendis fugit inventore accusamus
@@ -180,9 +176,7 @@
                 molestias itaque illo totam amet harum similique natus
                 molestiae.
               </p>
-              <button class="button">
-                <a href="/" target="_blank" class="button-link">Read More</a>
-              </button>
+              <button class="button">Read more</button>
             </li>
           </ul>
         </div>
