Add changes index.html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <button class="button">Read More</button>
             </li>
             <li class="blog-item">
-              <img src="./images/Blog2.png" alt="girls" class="img-blog" />
+              <img src="./images/blog2.png" alt="girls" class="img-blog" />
               <h3 class="blog-name">
                 Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
               </h3>
