--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:300,400,700,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/normolize.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>goit-markup-hw-04-mart</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:300,400,700,900&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <header class="site-nav">
-      <h1 class="logo">mart</h1>
-      <div class="container">
+      <nav class="page-nav container">
+        <a href="" class="logo">mart</a>
         <ul class="nav">
           <li class="nav-list"><a href="/" class="link">home</a></li>
           <li class="nav-list"><a href="/" class="link">about us</a></li>
@@ -26,7 +26,7 @@
             <a href="/" class="link">contact us</a>
           </li>
         </ul>
-      </div>
+      </nav>
     </header>
 
     <main>
@@ -145,7 +145,7 @@
                 placeat magnam iure reiciendis maxime delectus quae vitae, totam
                 fugit!
               </p>
-              <button class="button">Read More</button>
+              <a href="" class="button">Read More</a>
             </li>
             <li class="blog-item">
               <img src="./images/blog2.png" alt="girls" class="img-blog" />
@@ -160,7 +160,7 @@
                 eveniet et. Quisquam est modi ut ipsam laudantium alias earum
                 nulla, explicabo eveniet ad, dolor eius reprehenderit non!
               </p>
-              <button class="button">Read More</button>
+              <a href="" class="button">Read More</a>
             </li>
             <li class="blog-item">
               <img src="./images/blog3.png" alt="bus" class="img-blog" />
@@ -176,7 +176,7 @@
                 molestias itaque illo totam amet harum similique natus
                 molestiae.
               </p>
-              <button class="button">Read more</button>
+              <a href="" class="button">Read More</a>
             </li>
           </ul>
         </div>
